src/CssParser/csst3Parser.cs
// $ANTLR 3.0.1 C:\\Users\\Trihus\\git\\pathway\\src\\CssParser\\csst3.g3 2016-02-19 09:53:02
namespace SIL.PublishingSolution.Compiler
{

using System;
using Antlr.Runtime;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;




using Antlr.Runtime.Tree;

public class csst3Parser : Parser 
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"IMPORT", 
		"MEDIA", 
		"PAGE", 
		"REGION", 
		"RULE", 
		"ATTRIB", 
		"PARENTOF", 
		"PRECEDES", 
		"ATTRIBEQUAL", 
		"HASVALUE", 
		"BEGINSWITH", 
		"PSEUDO", 
		"PROPERTY", 
		"FUNCTION", 
		"ANY", 
		"TAG", 
		"ID", 
		"CLASS", 
		"EM", 
		"STRING", 
		"IDENT", 
		"UNIT", 
		"NUM", 
		"COLOR", 
		"WS", 
		"COMMENT", 
		"LINE_COMMENT", 
		"'@import'", 
		"'@include'", 
		"';'", 
		"'@media'", 
		"'{'", 
		"'}'", 
		"'@page'", 
		"'@'", 
		"','", 
		"'>'", 
		"'+'", 
		"'#'", 
		"'.'", 
		"'*'", 
		"':'", 
		"'::'", 
		"'['", 
		"']'", 
		"'='", 
		"'~='", 
		"'|='", 
		"'%'", 
		"'('", 
		"')'"
    };

    public const int PRECEDES = 11;
    public const int PSEUDO = 15;
    public const int CLASS = 21;
    public const int ANY = 18;
    public const int COMMENT = 29;
    public const int IMPORT = 4;
    public const int HASVALUE = 13;
    public const int COLOR = 27;
    public const int MEDIA = 5;
    public const int RULE = 8;
    public const int ID = 20;
    public const int WS = 28;
    public const int EOF = -1;
    public const int UNIT = 25;
    public const int PROPERTY = 16;
    public const int NUM = 26;
    public const int EM = 22;
    public const int PAGE = 6;
    public const int FUNCTION = 17;
    public const int REGION = 7;
    public const int PARENTOF = 10;
    public const int ATTRIBEQUAL = 12;
    public const int LINE_COMMENT = 30;
    public const int IDENT = 24;
    public const int ATTRIB = 9;
    public const int STRING = 23;
    public const int TAG = 19;
    public const int BEGINSWITH = 14;
    
    
        public csst3Parser(ITokenStream input) 
    		: base(input)
    	{
    		InitializeCyclicDFAs();
        }
        
    protected ITreeAdaptor adaptor = new CommonTreeAdaptor();
    
    public ITreeAdaptor TreeAdaptor
    {
        get { return this.adaptor; }
        set { this.adaptor = value; }
    }

    override public string[] TokenNames
	{
		get { return tokenNames; }
	}

    override public string GrammarFileName
	{
		get { return "C:\\Users\\Trihus\\git\\pathway\\src\\CssParser\\csst3.g3"; }
	}

    
    private System.Collections.Generic.List<System.String> errors = new System.Collections.Generic.List<System.String>();
    override public void DisplayRecognitionError(System.String[] tokenNames, RecognitionException e) {
        System.String hdr = GetErrorHeader(e);
        System.String msg = GetErrorMessage(e, tokenNames);
        errors.Add(hdr + " " + msg);
    }
    public System.Collections.Generic.List<System.String> GetErrors() {
        return errors;
    }


    public class stylesheet_return : ParserRuleReturnScope 
    {
        internal CommonTree tree;
        override public object Tree
        {
        	get { return tree; }
        }
    };
    
    // $ANTLR start stylesheet
    // C:\\Users\\Trihus\\git\\pathway\\src\\CssParser\\csst3.g3:46:1: public stylesheet : ( importRule )* ( media | pageRule | ruleset )+ ;
    public stylesheet_return stylesheet() // throws RecognitionException [1]
    {   
        stylesheet_return retval = new stylesheet_return();
        retval.start = input.LT(1);
        
        CommonTree root_0 = null;
    
        importRule_return importRule1 = null;

        media_return media2 = null;

        pageRule_return pageRule3 = null;

        ruleset_return ruleset4 = null;
        
        
    
        try 
    	{
            // C:\\Users\\Trihus\\git\\pathway\\src\\CssParser\\csst3.g3:48:2: ( ( importRule )* ( media | pageRule | ruleset )+ )
            // C:\\Users\\Trihus\\git\\pathway\\src\\CssParser\\csst3.g3:48:4: ( importRule )* ( media | pageRule | ruleset )+
            {
            	root_0 = (CommonTree)adaptor.GetNilNode();
            
            	// C:\\Users\\Trihus\\git\\pathway\\src\\CssParser\\csst3.g3:48:4: ( importRule )*
            	do 
            	{
            	    int alt1 = 2;
            	    int LA1_0 = input.LA(1);
            	    
            	    if ( ((LA1_0 >= 31 && LA1_0 <= 32)) )
            	    {
            	        alt1 = 1;
            	    }
            	    
            	
            	    switch (alt1) 
            		{
            			case 1 :
            			    // C:\\Users\\Trihus\\git\\pathway\\src\\CssParser\\csst3.g3:48:4: importRule
            			    {
            			    	PushFollow(FOLLOW_importRule_in_stylesheet169);
            			    	importRule1 = importRule();
            			    	followingStackPointer_--;
            			    	
            			    	adaptor.AddChild(root_0, importRule1.Tree);
            			    
            			    }
            			    break;
            	
            			default:
            			    goto loop1;
            	    }
            	} while (true);
            	
            	loop1:
            		;	// Stops C# compiler whinging that label 'loop1' has no statements

            	// C:\\Users\\Trihus\\git\\pathway\\src\\CssParser\\csst3.g3:48:16: ( media | pageRule | ruleset )+
            	int cnt2 = 0;
            	do 
            	{
            	    int alt2 = 4;
            	    switch ( input.LA(1) ) 
            	    {
            	    case 34:
            	    	{
            	        alt2 = 1;
            	        }
            	        break;
            	    case 37:
            	    	{
            	        alt2 = 2;
            	        }
            	        break;
            	    case IDENT:
            	    case UNIT:
            	    case 42:
            	    case 43:
            	    case 44:
            	    case 45:
            	    case 46:
            	    	{
            	        alt2 = 3;
            	        }
            	        break;
            	    
            	    }
            	
            	    switch (alt2) 
            		{
            			case 1 :
            			    // C:\\Users\\Trihus\\git\\pathway\\src\\CssParser\\csst3.g3:48:17: media
            			    {
            			    	PushFollow(FOLLOW_media_in_stylesheet173);
            			    	media2 = media();
            			    	followingStackPointer_--;
            			    	
            			    	adaptor.AddChild(root_0, media2.Tree);
            			    
            			    }
            			    break;
            			case 2 :
            			    // C:\\Users\\Trihus\\git\\pathway\\src\\CssParser\\csst3.g3:48:25: pageRule
            			    {
            			    	PushFollow(FOLLOW_pageRule_in_stylesheet177);
            			    	pageRule3 = pageRule();
            			    	followingStackPointer_--;
            			    	
            			    	adaptor.AddChild(root_0, pageRule3.Tree);
            			    
            			    }
            			    break;
            			case 3 :
            			    // C:\\Users\\Trihus\\git\\pathway\\src\\CssParser\\csst3.g3:48:36: ruleset
            			    {
            			    	PushFollow(FOLLOW_ruleset_in_stylesheet181);
            			    	ruleset4 = ruleset();
            			    	followingStackPointer_--;
            			    	
            			    	adaptor.AddChild(root_0, ruleset4.Tree);
            			    
            			    }
            			    break;
            	
            			default:
            			    if ( cnt2 >= 1 ) goto loop2;
            		            EarlyExitException eee =
            		                new EarlyExitException(2, input);
            		            throw eee;
            	    }
            	    cnt2++;
            	} while (true);
            	
            	loop2:
            		;	// Stops C# compiler whinging that label 'loop2' has no statements

            
            }
    
            retval.stop = input.LT(-1);
            
            	retval.tree = (CommonTree)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, retval.start, retval.stop);
    
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end stylesheet

    public class importRule_return : ParserRuleReturnScope 
    {
        internal CommonTree tree;
        override public object Tree
        {
        	get { return tree; }
        }
    };
    
    // $ANTLR start importRule
    // C:\\Users\\Trihus\\git\\pathway\\src\\CssParser\\csst3.g3:51:1: importRule : ( ( '@import' | '@include' ) STRING ';' -> ^( IMPORT STRING ) | ( '@import' | '@include' ) function ';' -> ^( IMPORT function ) );
    public importRule_return importRule() // throws RecognitionException [1]
    {   
        importRule_return retval = new importRule_return();
        retval.start = input.LT(1);
        
        CommonTree root_0 = null;
    
        IToken string_literal5 = null;
        IToken string_literal6 = null;
        IToken STRING7 = null;
        IToken char_literal8 = null;
        IToken string_literal9 = null;
        IToken string_literal10 = null;
        IToken char_literal12 = null;
        function_return function11 = null;
        
        
        CommonTree string_literal5_tree=null;
        CommonTree string_literal6_tree=null;
        CommonTree STRING7_tree=null;
        CommonTree char_literal8_tree=null;
        CommonTree string_literal9_tree=null;
        CommonTree string_literal10_tree=null;
        CommonTree char_literal12_tree=null;
        RewriteRuleTokenStream stream_33 = new RewriteRuleTokenStream(adaptor,"token 33");
        RewriteRuleTokenStream stream_STRING = new RewriteRuleTokenStream(adaptor,"token STRING");
        RewriteRuleTokenStream stream_31 = new RewriteRuleTokenStream(adaptor,"token 31");
        RewriteRuleTokenStream stream_32 = new RewriteRuleTokenStream(adaptor,"token 32");
        RewriteRuleSubtreeStream stream_function = new RewriteRuleSubtreeStream(adaptor,"rule function");
        try 
    	{
            // C:\\Users\\Trihus\\git\\pathway\\src\\CssParser\\csst3.g3:52:2: ( ( '@import' | '@include' ) STRING ';' -> ^( IMPORT STRING ) | ( '@import' | '@include' ) function ';' -> ^( IMPORT function ) )
            int alt5 = 2;
            int LA5_0 = input.LA(1);
            
            if ( (LA5_0 == 31) )
            {
                int LA5_1 = input.LA(2);
                
                if ( (LA5_1 == IDENT) )
                {
                    alt5 = 2;
                }
                else if ( (LA5_1 == STRING) )
                {
                    alt5 = 1;
                }
                else 
                {
                    NoViableAltException nvae_d5s1 =
                        new NoViableAltException("51:1: importRule : ( ( '@import' | '@include' ) STRING ';' -> ^( IMPORT STRING ) | ( '@import' | '@include' ) function ';' -> ^( IMPORT function ) );", 5, 1, input);
                
                    throw nvae_d5s1;
                }
            }
            else if ( (LA5_0 == 32) )
            {
                int LA5_2 = input.LA(2);
                
                if ( (LA5_2 == IDENT) )
                {
                    alt5 = 2;
                }
                else if ( (LA5_2 == STRING) )
                {
                    alt5 = 1;
                }
                else 
                {
                    NoViableAltException nvae_d5s2 =
                        new NoViableAltException("51:1: importRule : ( ( '@import' | '@include' ) STRING ';' -> ^( IMPORT STRING ) | ( '@import' | '@include' ) function ';' -> ^( IMPORT function ) );", 5, 2, input);
                
                    throw nvae_d5s2;
                }
            }
            else 
            {
                NoViableAltException nvae_d5s0 =
                    new NoViableAltException("51:1: importRule : ( ( '@import' | '@include' ) STRING ';' -> ^( IMPORT STRING ) | ( '@import' | '@include' ) function ';' -> ^( IMPORT function ) );", 5, 0, input);
            
                throw nvae_d5s0;
            }
            switch (alt5) 
            {
                case 1 :
                    // C:\\Users\\Trihus\\git\\pathway\\src\\CssParser\\csst3.g3:52:4: ( '@import' | '@include' ) STRING ';'
                    {
                    	// C:\\Users\\Trihus\\git\\pathway\\src\\CssParser\\csst3.g3:52:4: ( '@import' | '@include' )
                    	int alt3 = 2;
                    	int LA3_0 = input.LA(1);
                    	
                    	if ( (LA3_0 == 31) )
                    	{
                    	    alt3 = 1;
                    	}
                    	else if ( (LA3_0 == 32) )
                    	{
                    	    alt3 = 2;
                    	}
                    	else 
                    	{
                    	    NoViableAltException nvae_d3s0 =
                    	        new NoViableAltException("52:4: ( '@import' | '@include' )", 3, 0, input);
                    	
                    	    throw nvae_d3s0;
                    	}
                    	switch (alt3) 
                    	{
                    	    case 1 :
                    	        // C:\\Users\\Trihus\\git\\pathway\\src\\CssParser\\csst3.g3:52:5: '@import'
                    	        {
                    	        	string_literal5 = (IToken)input.LT(1);
                    	        	Match(input,31,FOLLOW_31_in_importRule195); 
                    	        	stream_31.Add(string_literal5);

                    	        
                    	        }
                    	        break;
                    	    case 2 :
                    	        // C:\\Users\\Trihus\\git\\pathway\\src\\CssParser\\csst3.g3:52:17: '@include'
                    	        {
                    	        	string_literal6 = (IToken)input.LT(1);
                    	        	Match(input,32,FOLLOW_32_in_importRule199); 
                    	        	stream_32.Add(string_literal6);

                    	        
                    	        }
                    	        break;
                    	
                    	}

                    	STRING7 = (IToken)input.LT(1);
                    	Match(input,STRING,FOLLOW_STRING_in_importRule203); 
                    	stream_STRING.Add(STRING7);

                    	char_literal8 = (IToken)input.LT(1);
                    	Match(input,33,FOLLOW_33_in_importRule205); 
                    	stream_33.Add(char_literal8);

                    	
                    	// AST REWRITE
                    	// elements:          STRING
                    	// token labels:      
                    	// rule labels:       retval
                    	// token list labels: 
                    	// rule list labels:  
                    	retval.tree = root_0;
                    	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "token retval", (retval!=null ? retval.Tree : null));
                    	
                    	root_0 = (CommonTree)adaptor.GetNilNode();
                    	// 52:41: -> ^( IMPORT STRING )
                    	{
                    	    // C:\\Users\\Trihus\\git\\pathway\\src\\CssParser\\csst3.g3:52:44: ^( IMPORT STRING )
                    	    {
                    	    CommonTree root_1 = (CommonTree)adaptor.GetNilNode();
                    	    root_1 = (CommonTree)adaptor.BecomeRoot(adaptor.Create(IMPORT, "IMPORT"), root_1);
                    	    
                    	    adaptor.AddChild(root_1, stream_STRING.Next());
                    	    
                    	    adaptor.AddChild(root_0, root_1);
                    	    }
                    	
                    	}
                    	

                    
                    }
                    break;
                case 2 :
                    // C:\\Users\\Trihus\\git\\pathway\\src\\CssParser\\csst3.g3:53:4: ( '@import' | '@include' ) function ';'
                    {
                    	// C:\\Users\\Trihus\\git\\pathway\\src\\CssParser\\csst3.g3:53:4: ( '@import' | '@include' )
                    	int alt4 = 2;
                    	int LA4_0 = input.LA(1);
                    	
                    	if ( (LA4_0 == 31) )
                    	{
                    	    alt4 = 1;
                    	}
                    	else if ( (LA4_0 == 32) )
                    	{
                    	    alt4 = 2;
                    	}
                    	else 
                    	{
                    	    NoViableAltException nvae_d4s0 =
                    	        new NoViableAltException("53:4: ( '@import' | '@include' )", 4, 0, input);
                    	
                    	    throw nvae_d4s0;
                    	}
                    	switch (alt4) 
                    	{
                    	    case 1 :
                    	        // C:\\Users\\Trihus\\git\\pathway\\src\\CssParser\\csst3.g3:53:5: '@import'
                    	        {
                    	        	string_literal9 = (IToken)input.LT(1);
                    	        	Match(input,31,FOLLOW_31_in_importRule221); 
                    	        	stream_31.Add(string_literal9);

                    	        
                    	        }
                    	        break;
                    	    case 2 :
                    	        // C:\\Users\\Trihus\\git\\pathway\\src\\CssParser\\csst3.g3:53:17: '@include'
                    	        {
                    	        	string_literal10 = (IToken)input.LT(1);
                    	        	Match(input,32,FOLLOW_32_in_importRule225); 
                    	        	stream_32.Add(string_literal10);

                    	        
                    	        }
                    	        break;
                    	
                    	}

                    	PushFollow(FOLLOW_function_in_importRule229);
                    	function11 = function();
                    	followingStackPointer_--;
                    	
                    	stream_function.Add(function11.Tree);
                    	char_literal12 = (IToken)input.LT(1);
                    	Match(input,33,FOLLOW_33_in_importRule231); 
                    	stream_33.Add(char_literal12);

                    	
                    	// AST REWRITE
                    	// elements:          function
                    	// token labels:      
                    	// rule labels:       retval
                    	// token list labels: 
                    	// rule list labels:  
                    	retval.tree = root_0;
                    	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "token retval", (retval!=null ? retval.Tree : null));
                    	
                    	root_0 = (CommonTree)adaptor.GetNilNode();
                    	// 53:43: -> ^( IMPORT function )
                    	{
                    	    // C:\\Users\\Trihus\\git\\pathway\\src\\CssParser\\csst3.g3:53:46: ^( IMPORT function )
                    	    {
                    	    CommonTree root_1 = (CommonTree)adaptor.GetNilNode();
                    	    root_1 = (CommonTree)adaptor.BecomeRoot(adaptor.Create(IMPORT, "IMPORT"), root_1);
                    	    
                    	    adaptor.AddChild(root_1, stream_function.Next());
                    	    
                    	    adaptor.AddChild(root_0, root_1);
                    	    }
                    	
                    	}
                    	

                    
                    }
                    break;
            
            }
            retval.stop = input.LT(-1);
            
            	retval.tree = (CommonTree)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, retval.start, retval.stop);
    
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end importRule

    public class media_return : ParserRuleReturnScope 
    {
        internal CommonTree tree;
        override public object Tree
        {
        	get { return tree; }
        }
    };
    
    // $ANTLR start media
    // C:\\Users\\Trihus\\git\\pathway\\src\\CssParser\\csst3.g3:56:1: media : '@media' IDENT '{' ( pageRule | ruleset )+ '}' -> ^( MEDIA IDENT ( pageRule )* ( ruleset )* ) ;
    public media_return media() // throws RecognitionException [1]
    {   
        media_return retval = new media_return();
        retval.start = input.LT(1);
        
        CommonTree root_0 = null;
    
        IToken string_literal13 = null;
        IToken IDENT14 = null;
        IToken char_literal15 = null;
        IToken char_literal18 = null;
        pageRule_return pageRule16 = null;

        ruleset_return ruleset17 = null;
        
        
        CommonTree string_literal13_tree=null;
        CommonTree IDENT14_tree=null;
        CommonTree char_literal15_tree=null;
        CommonTree char_literal18_tree=null;
        RewriteRuleTokenStream stream_34 = new RewriteRuleTokenStream(adaptor,"token 34");
        RewriteRuleTokenStream stream_35 = new RewriteRuleTokenStream(adaptor,"token 35");
        RewriteRuleTokenStream stream_36 = new RewriteRuleTokenStream(adaptor,"token 36");
        RewriteRuleTokenStream stream_IDENT = new RewriteRuleTokenStream(adaptor,"token IDENT");
        RewriteRuleSubtreeStream stream_pageRule = new RewriteRuleSubtreeStream(adaptor,"rule pageRule");
        RewriteRuleSubtreeStream stream_ruleset = new RewriteRuleSubtreeStream(adaptor,"rule ruleset");
        try 
    	{
            // C:\\Users\\Trihus\\git\\pathway\\src\\CssParser\\csst3.g3:57:2: ( '@media' IDENT '{' ( pageRule | ruleset )+ '}' -> ^( MEDIA IDENT ( pageRule )* ( ruleset )* ) )
            // C:\\Users\\Trihus\\git\\pathway\\src\\CssParser\\csst3.g3:57:4: '@media' IDENT '{' ( pageRule | ruleset )+ '}'
            {
            	string_literal13 = (IToken)input.LT(1);
            	Match(input,34,FOLLOW_34_in_media252); 
            	stream_34.Add(string_literal13);

            	IDENT14 = (IToken)input.LT(1);
            	Match(input,IDENT,FOLLOW_IDENT_in_media254); 
            	stream_IDENT.Add(IDENT14);

            	char_literal15 = (IToken)input.LT(1);
            	Match(input,35,FOLLOW_35_in_media256); 
            	stream_35.Add(char_literal15);

            	// C:\\Users\\Trihus\\git\\pathway\\src\\CssParser\\csst3.g3:57:23: ( pageRule | ruleset )+
            	int cnt6 = 0;
            	do 
            	{
            	    int alt6 = 3;
            	    int LA6_0 = input.LA(1);
            	    
            	    if ( (LA6_0 == 37) )
            	    {
            	        alt6 = 1;
            	    }
            	    else if ( ((LA6_0 >= IDENT && LA6_0 <= UNIT) || (LA6_0 >= 42 && LA6_0 <= 46)) )
            	    {
            	        alt6 = 2;
            	    }
            	    
            	
            	    switch (alt6) 
            		{
            			case 1 :
            			    // C:\\Users\\Trihus\\git\\pathway\\src\\CssParser\\csst3.g3:57:24: pageRule
            			    {
            			    	PushFollow(FOLLOW_pageRule_in_media259);
            			    	pageRule16 = pageRule();
            			    	followingStackPointer_--;
            			    	
            			    	stream_pageRule.Add(pageRule16.Tree);
            			    
            			    }
            			    break;
            			case 2 :
            			    // C:\\Users\\Trihus\\git\\pathway\\src\\CssParser\\csst3.g3:57:35: ruleset
            			    {
            			    	PushFollow(FOLLOW_ruleset_in_media263);
            			    	ruleset17 = ruleset();
            			    	followingStackPointer_--;
            			    	
            			    	stream_ruleset.Add(ruleset17.Tree);
            			    
            			    }
            			    break;
            	
            			default:
            			    if ( cnt6 >= 1 ) goto loop6;
            		            EarlyExitException eee =
            		                new EarlyExitException(6, input);
            		            throw eee;
            	    }
            	    cnt6++;
            	} while (true);
            	
            	loop6:
            		;	// Stops C# compiler whinging that label 'loop6' has no statements

            	char_literal18 = (IToken)input.LT(1);
            	Match(input,36,FOLLOW_36_in_media267); 
            	stream_36.Add(char_literal18);

            	
            	// AST REWRITE
            	// elements:          ruleset, pageRule, IDENT
            	// token labels:      
            	// rule labels:       retval
            	// token list labels: 
            	// rule list labels:  
            	retval.tree = root_0;
            	RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "token retval", (retval!=null ? retval.Tree : null));
            	
            	root_0 = (CommonTree)adaptor.GetNilNode();
            	// 57:49: -> ^( MEDIA IDENT ( pageRule )* ( ruleset )* )
            	{
            	    // C:\\Users\\Trihus\\git\\pathway\\src\\CssParser\\csst3.g3:57:52: ^( MEDIA IDENT ( pageRule )* ( ruleset )* )
            	    {
            	    CommonTree root_1 = (CommonTree)adaptor.GetNilNode();
            	    root_1 = (CommonTree)adaptor.BecomeRoot(adaptor.Create(MEDIA, "MEDIA"), root_1);
            	    
            	    adaptor.AddChild(root_1, stream_IDENT.Next());
            	    // C:\\Users\\Trihus\\git\\pathway\\src\\CssParser\\csst3.g3:57:67: ( pageRule )*
            	    while ( stream_pageRule.HasNext() )
            	    {
            	        adaptor.AddChild(root_1, stream_pageRule.Next());
            	    
            	    }
            	    stream_pageRule.Reset();
            	    // C:\\Users\\Trihus\\git\\pathway\\src\\CssParser\\csst3.g3:57:77: ( ruleset )*
            	    while ( stream_ruleset.HasNext() )
            	    {
            	        adaptor.AddChild(root_1, stream_ruleset.Next());
            	    
            	    }
            	    stream_ruleset.Reset();
            	    
            	    adaptor.AddChild(root_0, root_1);
            	    }
            	
            	}
            	

            
            }
    
            retval.stop = input.LT(-1);
            
            	retval.tree = (CommonTree)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, retval.start, retval.stop);
    
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end media

    public class pageRule_return : ParserRuleReturnScope 
    {
        internal CommonTree tree;
        override public object Tree
        {
        	get { return tree; }
        }
    };
    
    // $ANTLR start pageRule
    // C:\\Users\\Trihus\\git\\pathway\\src\\CssParser\\csst3.g3:60:1: pageRule : '@page' ( IDENT )* ( pseudo )* '{' ( properties )? ( region )* '}' -> ^( PAGE ( IDENT )* ( pseudo )* ( properties )* ( region )* ) ;
    public pageRule_return pageRule() // throws RecognitionException [1]
    {   
        pageRule_return retval = new pageRule_return();
        retval.start = input.LT(1);
        
        CommonTree root_0 = null;
    
        IToken string_literal19 = null;
        IToken IDENT20 = null;
        IToken char_literal22 = null;
        IToken char_literal25 = null;
        pseudo_return pseudo21 = null;

        properties_return properties23 = null;

        region_return region24 = null;
        
        
        CommonTree string_literal19_tree=null;
        CommonTree IDENT20_tree=null;
        CommonTree char_literal22_tree=null;
        CommonTree char_literal25_tree=null;
        RewriteRuleTokenStream stream_35 = new RewriteRuleTokenStream(adaptor,"token 35");
        RewriteRuleTokenStream stream_36 = new RewriteRuleTokenStream(adaptor,"token 36");
        RewriteRuleTokenStream stream_IDENT = new RewriteRuleTokenStream(adaptor,"token IDENT");
        RewriteRuleTokenStream stream_37 = new RewriteRuleTokenStream(adaptor,"token 37");
        RewriteRuleSubtreeStream stream_region = new RewriteRuleSubtreeStream(adaptor,"rule region");
        RewriteRuleSubtreeStream stream_pseudo = new RewriteRuleSubtreeStream(adaptor,"rule pseudo");
        RewriteRuleSubtreeStream stream_properties = new RewriteRuleSubtreeStream(adaptor,"rule properties");
        try 
    	{
            // C:\\Users\\Trihus\\git\\pathway\\src\\CssParser\\csst3.g3:61:3: ( '@page' ( IDENT )* ( pseudo )* '{' ( properties )? ( region )* '}' -> ^( PAGE ( IDENT )* ( pseudo )* ( properties )* ( region )* ) )
            // C:\\Users\\Trihus\\git\\pathway\\src\\CssParser\\csst3.g3:61:5: '@page' ( IDENT )* ( pseudo )* '{' ( properties )? ( region )* '}'
            {
            	string_literal19 = (IToken)input.LT(1);
            	Match(input,37,FOLLOW_37_in_pageRule295); 
            	stream_37.Add(string_literal19);

            	// C:\\Users\\Trihus\\git\\pathway\\src\\CssParser\\csst3.g3:61:13: ( IDENT )*
            	do 
            	{
            	    int alt7 = 2;
            	    int LA7_0 = input.LA(1);
            	    
            	    if ( (LA7_0 == IDENT) )
            	    {
            	        alt7 = 1;
            	    }
            	    
            	
            	    switch (alt7) 
            		{
            			case 1 :
            			    // C:\\Users\\Trihus\\git\\pathway\\src\\CssParser\\csst3.g3:61:13: IDENT
            			    {
            			    	IDENT20 = (IToken)input.LT(1);
            			    	Match(input,IDENT,FOLLOW_IDENT_in_pageRule297); 
            			    	stream_IDENT.Add(IDENT20);

            			    
            			    }
            			    break;
            	
            			default:
            			    goto loop7;
            	    }
            	} while (true);
            	
            	loop7:
            		;	// Stops C# compiler whinging that label 'loop7' has no statements
